# esp32-waveshare

./: CMakeLists.txt  sdkconfig
config/: tusb_config.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: ui.h  ui_events.c  ui_events.h
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
